--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-firestore:19.0.2'
+
+    implementation "com.github.bumptech.glide:glide:4.9.0"
 }
 apply plugin: 'com.google.gms.google-services'
